Ensure full pylint, unpin versions from reqs

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ dist: xenial
 install:
   - pip install -r requirements.txt
 script:
-  - pylint **/*.py
+  - find . -name '*.py' | xargs pylint
   - pytest
